--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,600&amp;subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
           integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link rel="icon" href="img/Blue-Textured.jpg" type="image/x-icon">
+    <link rel="icon" href="img/nowe.pngg" type="image/x-icon">
 
 <body>
 <header>
@@ -24,12 +24,7 @@
         <h1 class="title">Mateusz Fryda</h1>
         <p>Magister inżynier budownictwa. Obecnie początkujący programista Java.</p>
     </div>
-    <a class="social-media">
-        <a target="_blank" href="https://www.facebook.com/tadeusz.majewski.5"><i class="fab fa-facebook-f"></i></a>
-        <!--<i class="fab fa-twitter"></i>-->
-        <a target="_blank" href="https://github.com/matfryda"><i class="fab fa-github-alt"> </i></a>
-        <a target="_blank" href="https://www.linkedin.com/in/mateusz-fryda-a79a69164/"><i class="fab fa-linkedin-in"></i></a>
-    </a>
+
 </header>
 <main>
     <!--U M I E J E T N O S C I -->
@@ -40,7 +35,8 @@
                 <h3>Java</h3>
             </div>
             <div class="description-skill">
-                <p>Solidna znajomość języka Java. Ukończony kurs "JAVA od podstaw - 360h" - Software Development Academy. Tworzenie własnych
+                <p>Solidna znajomość języka Java. Ukończony kurs "JAVA od podstaw - 360h" - Software Development
+                    Academy. Tworzenie własnych
                     aplikacji</p>
             </div>
         </article>
@@ -85,7 +81,7 @@
                 <p>Tworzenie prostych stron www / edycja treści w istniejących stronach</p>
             </div>
         </article>
-               <article class="skills">
+        <article class="skills">
             <div class="skill">
                 <h3>GIT</h3>
             </div>
@@ -111,9 +107,9 @@
             </div>
         </article>
         <!--<article class="certs">-->
-            <!--<div class="cert">-->
-                <!--<h3>ISTQB Certified Tester Foundation Level</h3>-->
-            <!--</div>-->
+        <!--<div class="cert">-->
+        <!--<h3>ISTQB Certified Tester Foundation Level</h3>-->
+        <!--</div>-->
         <!--</article>-->
     </section>
     <!--L I N K I -->
@@ -145,7 +141,8 @@
             </div>
             <div class="description-education">
                 <p class="subtitle">Euro-Alians, GEOSET, STAR ITS, TPA Sp. z o.o., PORR Sp. z o.o.</p>
-                <p>Praca w charakterze asystenta projektanta, laboranta zarówno w biurze i laboratorium jak i na budowie. Obługa programów branżowych takich jak AutoCAD, CIVIL 3D, Sketchup 3D, Quantum Gis itp.</p>
+                <p>Praca w charakterze asystenta projektanta, laboranta zarówno w biurze i laboratorium jak i na
+                    budowie. Obługa programów branżowych takich jak AutoCAD, CIVIL 3D, Sketchup 3D, Quantum Gis itp.</p>
             </div>
         </article>
         <article class="education">
@@ -172,6 +169,13 @@
 </main>
 <footer>
     <h2>mateuszfryda@gmail.com</h2>
+    <a class="social-media">
+        <a target="_blank" href="https://www.facebook.com/tadeusz.majewski.5"><i class="fab fa-facebook-f"></i></a>
+        <!--<i class="fab fa-twitter"></i>-->
+        <a target="_blank" href="https://github.com/matfryda"><i class="fab fa-github-alt"> </i></a>
+        <a target="_blank" href="https://www.linkedin.com/in/mateusz-fryda-a79a69164/"><i
+                class="fab fa-linkedin-in"></i></a>
+    </a>
     <!--<small>-->
     <!--* image from-->
     <!--<a href="https://unsplash.com/@lifeofizaac_" target="_blank">unsplash.com/@lifeofizaac_</a>-->
